--- a/index2.html
+++ b/index2.html
@@ -103,16 +103,16 @@
                         <br>Congress of South-East Europe
                         </div>
                         <div class="d-flex">
-                            <div class="h2">MME
+                            <div class="h2 text-white">MME
                                 SEE
                             </div>
-                            <div class="h2">2025</div>
+                            <div class="h2 text-white mx-4"> 2025</div>
                         </div>
                         <div class="d-flex">
                             <div>
-                                <div class="h3">4 - 7</div>
-                                <div class="h4">JUNE 2025</div>
-                                <div class="h5">Trebinje, BIH</div>
+                                <div class="h3 text-white">4 - 7</div>
+                                <div class="h4 text-white">JUNE 2025</div>
+                                <div class="h5 text-white">Trebinje, BIH</div>
                             </div>
                             <div>
                                 <a href="./pages/register.html" class="btn btn-primary rounded-pill" role="button">
@@ -135,27 +135,19 @@
                         <br>Congress of South-East Europe
                         </div>
                         <div class="d-flex">
-                            <div class="h2">MME
+                            <div class="h2 text-white">MME
                                 SEE
                             </div>
-                            <div class="h2">2026</div>
+                            <div class="h2 text-white mx-4"> 2025</div>
                         </div>
                         <div class="d-flex">
-                            <div>
-                                <div class="h3">4 - 7</div>
-                                <div class="h4">JUNE 2025</div>
-                                <div class="h5">Trebinje, BIH</div>
-                            </div>
-                            <div>
-                                <a href="./pages/register.html" class="btn btn-primary rounded-pill" role="button">
-                                    <span class="h5 text-dark">Register</span>
-                                </a></div>
+                            <h3 class="text-white">Prof Dr Susai Rajendran</h3>
                         </div>
                         <div>
                         </div>
                     </div>
                     <div class="col">
-                        <img src="/images/Slider/Pocetna-trebinje.png"/>
+                        <img src="/images/Slider/Rajendran.jpg"/>
                     </div>
                 </div>
               </div>
@@ -167,21 +159,12 @@
                         <br>Congress of South-East Europe
                         </div>
                         <div class="d-flex">
-                            <div class="h2">MME
+                            <div class="h2 text-white">MME
                                 SEE
                             </div>
-                            <div class="h2">2027</div>
+                            <div class="h2 text-white mx-4"> 2025</div>
                         </div>
                         <div class="d-flex">
-                            <div>
-                                <div class="h3">4 - 7</div>
-                                <div class="h4">JUNE 2025</div>
-                                <div class="h5">Trebinje, BIH</div>
-                            </div>
-                            <div>
-                                <a href="./pages/register.html" class="btn btn-primary rounded-pill" role="button">
-                                    <span class="h5 text-dark">Register</span>
-                                </a></div>
                         </div>
                         <div>
                         </div>
@@ -1999,12 +1982,12 @@
     </div>
     <div class="text-center">
         <a href="./pages/contact.html" class="btn btn-primary rounded-pill p-3" role="button">
-            <span class="h2 text-dark">Become a
+            <span class="h5 text-dark">Become a
                 sponsor</span>
         </a>
     </div>
     <div class="text-center m-3 text-white">
-        <h3>
+        <h3 class="text-white">
             Register yourself for MME SEE congress now!</h3>
     </div>
     <div class="text-center m-3 text-white">
@@ -2013,7 +1996,7 @@
     </div>
     <div class="text-center">
         <a href="./pages/register.html" class="btn btn-primary rounded-pill p-3" role="button">
-            <span class="h2 text-dark">Register</span>
+            <span class="h5 text-dark">Register</span>
         </a>
     </div>
     <div id="footer" class="row my-5 text-white text-center">
@@ -2055,5 +2038,9 @@
     h2, .h2 {
     font-size: 3.75rem !important;
 }
+    .btn-primary{
+        background-color: #1ed8c6;
+        border-color: #1ed8c6;
+    }
   </style>
 </html>
