--- a/index2.html
+++ b/index2.html
@@ -81,20 +81,25 @@
             </nav>
         </div>
     </div>
+    <div class="row my-5"></div>
     <div class="row my-5 text-center">
         <div class="elementor-element elementor-widget elementor-widget-heading">
             <div class="elementor-heading-title elementor-size-default h2">6th Metallurgical & Materials Engineering</div>
             <span class="sub-title">Congress of South-East Europe 2025</span>
         </div>
     </div>
-    <div class="row slider m-5">
+    <div class="row my-5"></div>
+</div>
+<div class="container-fluid">
+    <div class="row my-5"></div>
+    <div class="row slider mt-5">
         <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-bs-ride="carousel">
-            <div class="carousel-indicators">
+            <div class="carousel-indicators" style="margin-bottom: -7rem;">
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
-            <div class="carousel-inner">
+            <div class="carousel-inner" style="width: 65%;">
               <div class="carousel-item active">
                 <div class="d-flex">
                     <div class="col">
@@ -185,12 +190,19 @@
             </button>
           </div>
     </div>
+</div>
+<div class="container">
+    <div class="row my-5"></div>
+    <div class="row my-5"></div>
+    <div class="row my-5"></div>
+
     <div class="row my-5">
         <div class="elementor-element elementor-widget elementor-widget-heading">
             <div class="elementor-heading-title elementor-size-default h2">Foreword</div>
             <span class="sub-title">Greetings, Colleagues.</span>
         </div>
     </div>
+
     <div class="row my-5">
         <div class="h6 text-white">
             <p> It gives me great pleasure to invite you to the Sixth Metallurgical & Materials Engineering Congress of South-East Europe (MME SEE 2025) in Trebinje, Bosnia and Herzegovina, from June 4 to 7, 2025.</p>
@@ -247,6 +259,7 @@
             </div>
        
     </div>
+
     <div class="row my-5">
         <div class="col">
             <div class="elementor-element elementor-widget elementor-widget-heading">
@@ -258,6 +271,7 @@
             MME SEE congress is an invitation only event with a carefully curated audience. You are more than welcome to submit your application.
         </div>
     </div>
+
     <div class="row bg-white rounded rounded-3 px-5 mx-5 mt-2">
         <div class="col p-4">
             <img src="./images/index/stari_grad_trebinje.jpg" title="spencer-davis-fWtJvFqyUQQ-unsplash" alt="" class="rounded rounded-3"/>
@@ -283,6 +297,7 @@
             </div>
         </div>
     </div>
+
     <div class="row my-5">
         <div class="col">
             <div class="elementor-element elementor-widget elementor-widget-heading">
@@ -294,6 +309,7 @@
             Get a 360-degree perspective from  experts about the opportunities, challenges and solutions in this industry.
         </div>
     </div>
+
     <div class="row my-5">
         <div class="col">
             <div class="elementor-element elementor-widget elementor-widget-heading">
@@ -304,6 +320,7 @@
         <div class="col">
         </div>
     </div>
+
     <div class="elementor-section elementor-top-section elementor-element elementor-element-770385d elementor-section-boxed elementor-section-height-default elementor-section-height-default"
          data-id="770385d" data-element_type="section">
         <div class="elementor-container elementor-column-gap-no">
@@ -1842,12 +1859,14 @@
             </div>
         </div>
     </div>
+
     <div class="row my-5">
         <div class="elementor-element elementor-widget elementor-widget-heading">
             <div class="elementor-heading-title elementor-size-default h2">MME
                 SEE</div><span class="sub-title">Location</span>
         </div>
     </div>
+
     <div class="row bg-white rounded rounded-3 px-5 mx-5 mt-2">
         <div class="col p-4">
             <img src="./images/index/Trebinje_panorama.webp" title="spencer-davis-fWtJvFqyUQQ-unsplash" alt="" class="rounded rounded-3"/>
@@ -1870,18 +1889,21 @@
                 The favorable climate enables the life of cultures such as vines, early fruits and vegetables, which enriches the Herzegovinian table in the tourist offer.</div>
         </div>
     </div>
+
     <div class="row my-5">
         <div class="elementor-element elementor-widget elementor-widget-heading">
             <h2 class="elementor-heading-title elementor-size-default"><a href="https://www.youtube.com/watch?v=934a3PP01BE">Meet</a>
             </h2><span class="sub-title">Trebinje</span>
         </div>
     </div>
+
     <div class="row my-5">
         <div class="elementor-element elementor-widget elementor-widget-heading">
             <div class="elementor-heading-title elementor-size-default h2">MME
                 SEE</div><span class="sub-title">Venue</span>
         </div>
     </div>
+
     <div class="row bg-white rounded rounded-3 px-5 mx-5 mt-2">
         <div class="col text-center">
             <div class="h2 my-5">Hotel Leotar</div>
@@ -1891,6 +1913,7 @@
             <img src="./images/index/Leotar.webp" title="spencer-davis-fWtJvFqyUQQ-unsplash" alt="" class="rounded rounded-3"/>
         </div>
     </div>
+
     <div class="row bg-white rounded rounded-3 px-5 mx-5 mt-2">
         <div class="col p-4">
             <img src="./images/index/Tvrdos_podrum.webp" title="spencer-davis-fWtJvFqyUQQ-unsplash" alt="" class="rounded rounded-3"/>
@@ -1900,6 +1923,7 @@
             <div class="h5">Although monks have long and frequently been involved in the production of wine, few monasteries today can boast of producing wine in the same league as the best wineries. One of the few exceptions in the region is the Herzegovinian monastery Tvrdoš, which has recently been consistently awarded at international wine evaluations.</div>
         </div>
     </div>
+
     <div class="row bg-white rounded rounded-3 px-5 mx-5 mt-2">
         <div class="col text-center">
             <div class="h2 my-5">Dubrovnik</div>
@@ -1909,6 +1933,7 @@
             <img src="./images/index/Dubrovnik.webp" title="spencer-davis-fWtJvFqyUQQ-unsplash" alt="" class="rounded rounded-3"/>
         </div>
     </div>
+
     <div class="row my-5">
         <div class="col">
             <div class="elementor-element elementor-widget elementor-widget-heading">
@@ -1922,6 +1947,7 @@
                 time!</p>
             </div>
     </div>
+
     <div class="row my-5">
         <div class="col p-4">
             <div class="pricing-container w-100 mw-100">
@@ -1976,29 +2002,35 @@
               </div>
         </div>
     </div>
+
     <div class="text-center elementor-element elementor-widget elementor-widget-heading">
         <div class="elementor-heading-title elementor-size-default h2">MME
             SEE</div><span class="sub-title">Sponsors</span>
     </div>
+
     <div class="text-center">
         <a href="./pages/contact.html" class="btn btn-primary rounded-pill p-3" role="button">
             <span class="h5 text-dark">Become a
                 sponsor</span>
         </a>
     </div>
+
     <div class="text-center m-3 text-white">
         <h3 class="text-white">
             Register yourself for MME SEE congress now!</h3>
     </div>
+
     <div class="text-center m-3 text-white">
         <span>Register yourself for this
             unforgettable experience on time!</span>
     </div>
+
     <div class="text-center">
         <a href="./pages/register.html" class="btn btn-primary rounded-pill p-3" role="button">
             <span class="h5 text-dark">Register</span>
         </a>
     </div>
+
     <div id="footer" class="row my-5 text-white text-center">
         <div class="mb-2">
             <div class="pb-4">
