update all pages

--- a/index2.html
+++ b/index2.html
@@ -32,11 +32,11 @@
   </head>
 <body>
 
-<div class="container elementor">
+<div class="container-xl elementor">
     <div class="row pt-5">
         <div class="col-12 pt-5 px-5">
             <nav class="navbar navbar-expand-lg navbar-dark">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="/index2.html">
                     <img src="./images/icons/MME_SEE_logo.svg" width="148" class="d-inline-block align-text-top">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,34 +45,34 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-xl-5">
                     <li class="nav-item">
-                        <a class="nav-link menu-item" aria-current="page" href="#">General Information</a>
+                        <a class="nav-link menu-item" aria-current="page" href="/pages/about2.html">General Information</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link menu-item ms-xl-4" href="#">Speakers</a>
+                        <a class="nav-link menu-item ms-xl-4" href="/pages/speakers2.html">Speakers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link menu-item ms-xl-4" href="#">Program</a>
+                        <a class="nav-link menu-item ms-xl-4" href="/pages/program2.html">Program</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link menu-item ms-xl-4" href="#">Sponsors</a>
+                        <a class="nav-link menu-item ms-xl-4" href="/pages/sponsors2.html">Sponsors</a>
                     </li>
                     <li class="nav-item dropdown ms-xl-4">
                         <a class="nav-link dropdown-toggle menu-item" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Archives
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item" href="#">MME SEE 2023</a></li>
-                        <li><a class="dropdown-item" href="#">MME SEE 2023</a></li>
-                        <li><a class="dropdown-item" href="#">MME SEE 2023</a></li>
-                        <li><a class="dropdown-item" href="#">MME SEE 2023</a></li>
+                        <li><a class="dropdown-item" href="/pages/mmesee2013.html">MME SEE 2023</a></li>
+                        <li><a class="dropdown-item" href="/pages/mmesee2019.html">MME SEE 2019</a></li>
+                        <li><a class="dropdown-item" href="/pages/mmesee2017.html">MME SEE 2017</a></li>
+                        <li><a class="dropdown-item" href="/pages/mmesee2015.html">MME SEE 2015</a></li>
                         </ul>
                     </li>
                     <li class="nav-item ms-xl-4">
-                        <a class="nav-link menu-item" href="#">Contacts</a>
+                        <a class="nav-link menu-item" href="/pages/contact2.html">Contacts</a>
                     </li>
                 </ul>
                 <form class="d-flex ms-xl-5">
-                    <a href="./pages/register.html" class="px-5 py-2 elementor-button elementor-size-md rounded-pill btn btn-lg btn-outline-info px-3" role="button">
+                    <a href="/pages/register2.html" class="px-5 py-2 elementor-button elementor-size-md rounded-pill btn btn-lg btn-outline-info px-3" role="button">
                         <span class="elementor-button-content-wrapper">
                             <span class="elementor-button-text">Register now</span>
                         </span>
@@ -91,6 +91,7 @@
     </div>
     <div class="row my-5"></div>
 </div>
+
 <div class="container-fluid">
     <div class="row my-5"></div>
     <div class="row slider mt-5">
@@ -192,7 +193,8 @@
           </div>
     </div>
 </div>
-<div class="container">
+
+<div class="container-xl">
     <div class="row my-5"></div>
     <div class="row my-5"></div>
     <div class="row my-5"></div>
@@ -1964,7 +1966,8 @@
         </div>
     </div>
 </div>
-<div class="container-lg">
+
+<div class="container-xl">
     <div class="row my-5">
         <div class="col-xl-2"></div>
         <div class="col-6 col-xl-4 p-4">
@@ -2022,7 +2025,7 @@
     </div>
 </div>
 
-<div class="container-lg">
+<div class="container-xl">
     <div class="elementor-element elementor-widget elementor-widget-heading">
         <div class="elementor-heading-title elementor-size-default h2">MME
             SEE</div><span class="sub-title h2">Sponsors</span>
