--- a/index2.html
+++ b/index2.html
@@ -82,18 +82,16 @@
         </div>
     </div>
     <div class="row my-5"></div>
-    <div class="row my-5 text-center">
+    <div class="row mt-5 text-center">
         <div class="elementor-element elementor-widget elementor-widget-heading">
             <div class="elementor-heading-title elementor-size-default h2">6<sup>th</sup> Metallurgical & Materials Engineering</div>
             <span class="sub-title h2">Congress of South-East Europe 2025</span>
         </div>
     </div>
-    <div class="row my-5"></div>
 </div>
 
 <div class="container-fluid">
-    <div class="row my-5"></div>
-    <div class="row slider mt-5">
+    <div class="row slider">
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -381,10 +379,6 @@
 </div>
 
 <div class="container-xl">
-    <div class="row my-5"></div>
-    <div class="row my-5"></div>
-    <div class="row my-5"></div>
-
     <div class="row my-5">
         <div class="elementor-element elementor-widget elementor-widget-heading">
             <div class="elementor-heading-title elementor-size-default h2">Foreword</div>
