--- a/index2.html
+++ b/index2.html
@@ -382,12 +382,13 @@
     <div class="row my-5">
         <div class="elementor-element elementor-widget elementor-widget-heading">
             <div class="elementor-heading-title elementor-size-default h2">Foreword</div>
-            <span class="sub-title">Greetings, Colleagues.</span>
+            <span class="sub-title h2">Greetings, Colleagues.</span>
         </div>
     </div>
 
+    
     <div class="row my-5">
-        <div class="h6 text-white">
+        <div class="text-1">
             <p> It gives me great pleasure to invite you to the Sixth Metallurgical & Materials Engineering Congress of South-East Europe (MME SEE 2025) in Trebinje, Bosnia and Herzegovina, from June 4 to 7, 2025.</p>
 
             <p>
@@ -444,23 +445,26 @@
     </div>
 
     <div class="row my-5">
-        <div class="col-12">
+        <div class="col-auto">
             <div class="elementor-element elementor-widget elementor-widget-heading">
-            <h2 class="elementor-heading-title elementor-size-default">
-                Why</h2><span class="sub-title h2">MME SEE?</span>
+            <span class="elementor-heading-title elementor-size-default h2"> Why</span>
+            <br/>
+            <span class="sub-title h2">MME SEE?</span>
+            </div>
         </div>
-    </div>
-        <div class="col text-white">
-            MME SEE congress is an invitation only event with a carefully curated audience. You are more than welcome to submit your application.
+        <div class="col text-2 pt-5">
+            <span>MME SEE congress is an invitation only event with a carefully curated audience. </span>
+            <br/>
+            <span>You are more than welcome to submit your application.</span>
         </div>
     </div>
 
     <div class="row">
         <div class="col-12">
-            <div class="card">
+            <div class="card" style="border-radius: 25px;">
                 <div class="row">
                   <div class="col-md-6">
-                    <img src="./images/index/stari_grad_trebinje.jpg" class="img-fluid rounded-start" alt="...">
+                    <img src="./images/index/stari_grad_trebinje.jpg" class="img-fluid" style="border-start-start-radius: 25px; border-end-start-radius: 25px;">
                   </div>
                   <div class="col-md-6">
                     <div class="ps-5 my-4">
