update all pages

--- a/index2.html
+++ b/index2.html
@@ -461,10 +461,10 @@
 
     <div class="row">
         <div class="col-12">
-            <div class="card" style="border-radius: 25px;">
+            <div class="card" style="border-radius: 20px;">
                 <div class="row">
                   <div class="col-md-6">
-                    <img src="./images/index/stari_grad_trebinje.jpg" class="img-fluid" style="border-start-start-radius: 25px; border-end-start-radius: 25px;">
+                    <img src="./images/index/stari_grad_trebinje.jpg" class="img-fluid" style="border-start-start-radius: 20px; border-end-start-radius: 20px;">
                   </div>
                   <div class="col-md-6">
                     <div class="ps-5 my-4">
@@ -495,14 +495,17 @@
     </div>
 
     <div class="row my-5">
-        <div class="col">
+        <div class="col-auto">
             <div class="elementor-element elementor-widget elementor-widget-heading">
-            <h2 class="elementor-heading-title elementor-size-default"> MME SEE</h2><span class="sub-title h2">Speakers</span>
+                <h2 class="elementor-heading-title elementor-size-default"> MME SEE</h2><span class="sub-title h2">Speakers</span>
+            </div>
         </div>
-    </div>
-        <div class="col text-white">
-            Get a 360-degree perspective from  experts about the opportunities, challenges and solutions in this industry.
+        <div class="col text-2 pt-5 ps-5">
+            <span>Get a 360-degree perspective from  experts about the opportunities,</span>
+            <br/>
+            <span>challenges and solutions in this industry.</span>
         </div>
+        
     </div>
 <!-- Agenda -->
     <div class="row">
@@ -2062,10 +2065,10 @@
 
     <div class="row">
         <div class="col-12">
-            <div class="card">
+            <div class="card" style="border-radius: 20px;">
                 <div class="row">
                   <div class="col-md-6">
-                    <img src="./images/index/Trebinje_panorama.webp" class="img-fluid rounded-start" alt="...">
+                    <img src="./images/index/Trebinje_panorama.webp" class="img-fluid" style="border-start-start-radius: 20px; border-end-start-radius: 20px;">
                   </div>
                   <div class="col-md-6">
                     <div class="h2 my-5">Trebinje.</div>
@@ -2105,50 +2108,49 @@
         </div>
     </div>
 
-    <div class="row bg-white mt-5">
+    <div class="row bg-white mt-5" style="border-radius: 20px;">
         <div class="col text-center">
-            <div class="h2 my-5">Hotel Leotar</div>
-            <div class="h5">With over a half-century of experience and tradition, Hotel Leotar in Trebinje is a reflection of perfect accommodation and a variety of offers subordinated exclusively to the guest. You can escape the hectic pace of civilization here, take a break, and enjoy a rich selection of Herzegovina wines, prosciutto and cheese, and national dishes prepared in a traditional but modern way.</div>
+            <h4 class="my-5" style="color: #252525;">Hotel Leotar</h4>
+            <div class="text-3">With over a half-century of experience and tradition, Hotel Leotar in Trebinje is a reflection of perfect accommodation and a variety of offers subordinated exclusively to the guest. You can escape the hectic pace of civilization here, take a break, and enjoy a rich selection of Herzegovina wines, prosciutto and cheese, and national dishes prepared in a traditional but modern way.</div>
         </div>
         <div class="col p-4">
-            <img src="./images/index/Leotar.webp" title="spencer-davis-fWtJvFqyUQQ-unsplash" alt="" class="rounded rounded-3"/>
+            <img src="./images/index/Leotar.webp" title="spencer-davis-fWtJvFqyUQQ-unsplash" style="border-radius: 20px;"/>
         </div>
     </div>
 
-    <div class="row bg-white mt-2">
+    <div class="row bg-white mt-2" style="border-radius: 20px;">
         <div class="col p-4">
-            <img src="./images/index/Tvrdos_podrum.webp" title="spencer-davis-fWtJvFqyUQQ-unsplash" alt="" class="rounded rounded-3"/>
+            <img src="./images/index/Tvrdos_podrum.webp" title="spencer-davis-fWtJvFqyUQQ-unsplash" alt="" style="border-radius: 20px;"/>
         </div>
         <div class="col text-center">
-            <div class="h2 my-5">Wine tour</div>
-            <div class="h5">Although monks have long and frequently been involved in the production of wine, few monasteries today can boast of producing wine in the same league as the best wineries. One of the few exceptions in the region is the Herzegovinian monastery Tvrdoš, which has recently been consistently awarded at international wine evaluations.</div>
+            <h4 class="my-5" style="color: #252525;">Wine tour</h4>
+            <div class="text-3">Although monks have long and frequently been involved in the production of wine, few monasteries today can boast of producing wine in the same league as the best wineries. One of the few exceptions in the region is the Herzegovinian monastery Tvrdoš, which has recently been consistently awarded at international wine evaluations.</div>
         </div>
     </div>
 
-    <div class="row bg-white mt-2">
+    <div class="row bg-white mt-2" style="border-radius: 20px;">
         <div class="col text-center">
-            <div class="h2 my-5">Dubrovnik</div>
-            <div class="h5">Sun-soaked Dubrovnik has culture in spades – stupendous medieval walls, beautifully preserved monasteries and palaces, and a whole slew of museums and galleries. However it also has plenty of beaches (most of them quite small) both close to the old town itself and in the surrounding area. Some of these are very well known and extremely popular, others a little more remote and well hidden.</div>
+            <h4 class="my-5" style="color: #252525;">Dubrovnik</h4>
+            <div class="text-3">Sun-soaked Dubrovnik has culture in spades – stupendous medieval walls, beautifully preserved monasteries and palaces, and a whole slew of museums and galleries. However it also has plenty of beaches (most of them quite small) both close to the old town itself and in the surrounding area. Some of these are very well known and extremely popular, others a little more remote and well hidden.</div>
         </div>
         <div class="col p-4">
-            <img src="./images/index/Dubrovnik.webp" title="spencer-davis-fWtJvFqyUQQ-unsplash" alt="" class="rounded rounded-3"/>
+            <img src="./images/index/Dubrovnik.webp" title="spencer-davis-fWtJvFqyUQQ-unsplash" style="border-radius: 20px;"/>
         </div>
     </div>
 <!-- Registration -->
-    <div class="row my-5">
-        <div class="col">
-            <div class="elementor-element elementor-widget elementor-widget-heading">
-            <h2 class="elementor-heading-title elementor-size-default">
-                MME SEE</h2><span class="sub-title h2">Registration</span>
-        </div>
-        </div>
-            <div class="col text-white">
-            <p>Register yourself for
-                this<br>unforgettable experience on
-                time!
-            </p>
+
+<div class="row my-5">
+    <div class="col-auto">
+        <div class="elementor-element elementor-widget elementor-widget-heading">
+            <h2 class="elementor-heading-title elementor-size-default"> MME SEE</h2><span class="sub-title h2">Registration</span>
         </div>
     </div>
+    <div class="col text-2 pt-5 ps-5">
+        <span>Register yourself for this</span>
+        <br/>
+        <span>unforgettable experience on time!</span>
+    </div>
+    
 </div>
 
 <div class="container-xl">
