--- a/pages/about2.html
+++ b/pages/about2.html
@@ -90,7 +90,7 @@
 		<div class="wrap w-100 d-flex align-items-center">
 			<div class="page-title-bar-inner d-flex flex-column align-items-center w-100">
 				<div class="page-header">
-					<h1 class="page-title typo-heading">General information</h1>
+					<h1 class="page-title typo-heading text-4" >General information</h1>
 				</div>
 				<div class="breadcrumb">
 					<!-- Breadcrumb NavXT 7.2.0 -->
