--- a/pages/sponsors2.html
+++ b/pages/sponsors2.html
@@ -88,7 +88,7 @@
 		<div class="wrap w-100 d-flex align-items-center">
 			<div class="page-title-bar-inner d-flex flex-column align-items-center w-100">
 				<div class="page-header">
-					<h1 class="page-title typo-heading">Sponsors</h1>
+					<h1 class="page-title typo-heading text-4">Sponsors</h1>
 				</div>
 				<div class="breadcrumb">
 					<!-- Breadcrumb NavXT 7.2.0 -->
