update menu archive

--- a/pages/mmesee2017.html
+++ b/pages/mmesee2017.html
@@ -25,171 +25,70 @@
 	<script type="text/javascript" src="../js/owl.carousel.js"></script>
 	<script type="text/javascript" src="../js/carousel.js"></script>
 	<script type="text/javascript" src="../js/jquery.nav.js"></script>
+	<link rel="stylesheet" href="../index.css" type="text/css" media="all">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 <link rel="icon" href="../images/mee-see-pojedinacni-transparentni-min-400x400.webp" sizes="192x192">
 </head>
 <body class="page-template-default page page-id-5229 wp-custom-logo opal-style chrome opal-layout-wide opal-page-title-right-left opal-footer-skin-light opal-has-menu-top elementor-default elementor-kit-7 elementor-page elementor-page-5229">
 	<div id="wptime-plugin-preloader"></div>
 	<div id="particles-js"></div> <!-- stats - count particles -->
-	<div class="opal-wrapper">
-		<div id="page" class="site">
-			<header id="masthead" class="site-header">
-				<div class="site-header">
-					<div data-elementor-type="wp-post" data-elementor-id="15" class="elementor elementor-15">
-						<div class="elementor-section elementor-top-section elementor-element elementor-element-753bdbe elementor-section-content-middle elementor-section-boxed elementor-section-height-default elementor-section-height-default"
-							 data-id="753bdbe" data-element_type="section"
-							 data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
-							<div class="elementor-container elementor-column-gap-no">
-								<div class="elementor-column elementor-col-16 elementor-top-column elementor-element elementor-element-a053468"
-									 data-id="a053468" data-element_type="column">
-									<div class="elementor-widget-wrap elementor-element-populated">
-										<div class="elementor-element elementor-element-4cac539 elementor-widget elementor-widget-opal-site-logo elementor-widget-image"
-											 data-id="4cac539" data-element_type="widget"
-											 data-widget_type="opal-site-logo.default">
-											<div class="elementor-widget-container">
-												<div class="elementor-image">
-													<a href="../index.html">
-														<img src="../images/icons/MME_SEE_logo.svg" alt="">
-													</a>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div class="elementor-column elementor-col-66 elementor-top-column elementor-element elementor-element-000c47d"
-									 data-id="000c47d" data-element_type="column">
-									<div class="elementor-widget-wrap elementor-element-populated">
-										<div class="elementor-element elementor-element-8b8cdf7 elementor-nav-menu--dropdown-mobile elementor-nav-menu__align-center elementor-menu-toggle__align-right elementor-nav-menu--indicator-angle elementor-nav-menu__text-align-aside elementor-nav-menu--toggle elementor-nav-menu--burger elementor-widget elementor-widget-opal-nav-menu"
-											 data-id="8b8cdf7" data-element_type="widget"
-											 data-settings="{&quot;layout&quot;:&quot;horizontal&quot;,&quot;toggle&quot;:&quot;burger&quot;}"
-											 data-widget_type="opal-nav-menu.default">
-											<div class="elementor-widget-container">
-												<nav class="elementor-nav-menu--mobile-enable elementor-nav-menu--main elementor-nav-menu__container elementor-nav-menu--layout-horizontal e--pointer-none"
-													 data-submenusminwidth="240" data-submenusmaxwidth="477">
-													<ul id="menu-main-menu" class="elementor-nav-menu">
-														<li class=" menu-item-4674">
-															<a href="about.html" class="elementor-item">General
-																information</a>
-														</li>
-														<li class=" menu-item-5059">
-															<a href="speakers.html"
-															   class="elementor-item">Speakers</a>
-														</li>
-														<li class=" menu-item-1755">
-															<a href="program.html"
-															   class="elementor-item">Program</a>
-														</li>
-														<li class=" menu-item-1269">
-															<a href="sponsors.html"
-															   class="elementor-item">Sponsors</a>
-														</li>
-														<li class=" menu-item-has-children menu-item-5220">
-															<a href="archives.html"
-															   class="elementor-item elementor-item-active">Archives</a>
-															<ul class="sub-menu elementor-nav-menu--dropdown">
-																<li class=" menu-item-5237">
-																	<a href="mmesee2023.html"
-																	   class="elementor-sub-item">MME SEE 2023</a>
-																</li>
-																<li class=" menu-item-5236">
-																	<a href="mmesee2019.html"
-																	   class="elementor-sub-item">MME SEE 2019</a>
-																</li>
-																<li class=" menu-item-5235">
-																	<a href="mmesee2017.html"
-																	   class="elementor-sub-item elementor-item-active">MME SEE 2017</a>
-																</li>
-																<li class=" menu-item-5234">
-																	<a href="mmesee2015.html"
-																	   class="elementor-sub-item">MME SEE 2015</a>
-																</li>
-																<li class=" menu-item-5241">
-																	<a href="mmesee2013.html"
-																	   class="elementor-sub-item">MME SEE 2013</a>
-																</li>
-															</ul>
-														</li>
-														<li class=" menu-item-2196">
-															<a href="contact.html"
-															   class="elementor-item">Contact</a>
-														</li>
-													</ul>
-												</nav>
-												<div class="elementor-menu-toggle" data-target="#menu-8b8cdf7">
-													<i class="eicon" aria-hidden="true"></i>
-													<span class="menu-toggle-title"></span>
-												</div>
-												<nav id="menu-8b8cdf7" class="elementor-nav-menu--canvas mp-menu">
-													<ul id="menu-canvas-2-8b8cdf7" class="nav-menu--canvas">
-														<li
-															class=" menu-item-home current-menu-item page_item page-item-4410 current_page_item menu-item-52">
-															<a href="./index.html" aria-current="page">Home</a>
-														</li>
-														<li class=" menu-item-4674">
-															<a href="about.html">General information</a>
-														</li>
-														<li class=" menu-item-5059">
-															<a href="./pages/speakers.html">Speakers</a>
-														</li>
-														<li class=" menu-item-1755">
-															<a href="./pages/program.html">Program</a>
-														</li>
-														<li class=" menu-item-1269">
-															<a href="./pages/sponsors.html">Sponsors</a>
-														</li>
-														<li class=" menu-item-has-children">
-															<a href="./pages/archives.html">Archives</a>
-															<ul class="sub-menu">
-																<li class=" menu-item-5237">
-																	<a href="./pages/mmesee2023.html">MME SEE 2023</a>
-																</li>
-																<li class=" menu-item-5236">
-																	<a href="./pages/mmesee2019.html">MME SEE 2019</a>
-																</li>
-																<li class=" menu-item-5235">
-																	<a href="./pages/mmesee2017.html">MME SEE 2017</a>
-																</li>
-																<li class=" menu-item-5234">
-																	<a href="./pages/mmesee2015.html">MME SEE 2015</a>
-																</li>
-																<li class=" menu-item-5241">
-																	<a href="./pages/mmesee2013.html">MME SEE 2013</a>
-																</li>
-															</ul>
-														</li>
-														<li class=" menu-item-2196">
-															<a href="./pages/contact.html">Contact</a>
-														</li>
-													</ul>
-												</nav>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div class="elementor-column elementor-col-16 elementor-top-column elementor-element elementor-element-6dbe381 elementor-hidden-phone"
-									 data-id="6dbe381" data-element_type="column">
-									<div class="elementor-widget-wrap elementor-element-populated">
-										<div class="elementor-element elementor-element-7332fd3 elementor-align-right elementor-mobile-align-justify elementor-button-outline_primary elementor-tablet-align-center elementor-widget elementor-widget-button"
-											 data-id="7332fd3" data-element_type="widget"
-											 data-widget_type="button.default">
-											<div class="elementor-widget-container">
-												<div class="elementor-button-wrapper">
-													<a href="register.html"
-													   class="elementor-button-link elementor-button elementor-size-md"
-													   role="button">
-														<span class="elementor-button-content-wrapper">
-															<span class="elementor-button-text">Register now</span>
-														</span>
-													</a>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
+
+	<div class="container-xl">
+		<div class="row py-5">
+			<div class="col-12 pt-5 px-5">
+				<nav class="navbar navbar-expand-lg navbar-dark">
+					<a class="navbar-brand" href="../index2.html">
+						<img src="../images/icons/MME_SEE_logo.svg" width="148" class="d-inline-block align-text-top">
+					</a>
+					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav ms-xl-5">
+						<li class="nav-item">
+							<a class="nav-link menu-item" aria-current="page" href="about2.html">General Information</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link menu-item ms-xl-4" href="speakers2.html">Speakers</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link menu-item ms-xl-4" href="program2.html">Program</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link menu-item ms-xl-4" href="sponsors2.html">Sponsors</a>
+						</li>
+						<li class="nav-item dropdown ms-xl-4">
+							<a class="nav-link dropdown-toggle menu-item" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Archives
+							</a>
+							<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+							<li><a class="dropdown-item" href="mmesee2023.html">MME SEE 2023</a></li>
+							<li><a class="dropdown-item" href="mmesee2019.html">MME SEE 2019</a></li>
+							<li><a class="dropdown-item" href="mmesee2017.html">MME SEE 2017</a></li>
+							<li><a class="dropdown-item" href="mmesee2015.html">MME SEE 2015</a></li>
+							<li><a class="dropdown-item" href="mmesee2013.html">MME SEE 2013</a></li>
+							</ul>
+						</li>
+						<li class="nav-item ms-xl-4">
+							<a class="nav-link menu-item" href="contact2.html">Contacts</a>
+						</li>
+					</ul>
+					<form class="d-flex ms-xl-5">
+						<a href="register2.html" class="px-5 py-2 elementor-button elementor-size-md rounded-pill btn btn-lg btn-outline-info px-3" role="button">
+							<span class="elementor-button-content-wrapper">
+								<span class="elementor-button-text">Register now</span>
+							</span>
+						</a>
+					</form>
 					</div>
-				</div>
-			</header>
+				</nav>
+			</div>
+		</div>
+	</div>
+	<div class="opal-wrapper pt-5">
+		<div id="page" class="site">
+			
 			<div id="page-title-bar" class="page-title-bar">
 				<div class="container">
 					<div class="wrap w-100 d-flex align-items-center">
@@ -434,6 +333,7 @@
 	<script type="text/javascript" src="../js/waypoints.min.js"></script>
 	<script type="text/javascript" src="../js/core.min.js"></script> <script type="text/javascript" src="../js/main-script.js"></script><script type="text/javascript" src="../js/frontend.min.js"></script>
 	<script type="text/javascript" src="../js/frontend.js"></script>
-	
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </body>
 </html>
