--- a/pages/register2.html
+++ b/pages/register2.html
@@ -7,21 +7,21 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Register – MME SEE 2025</title>
 
-	<link rel="stylesheet" href="/css/style.css" type="text/css" media="all">
-	<link rel="stylesheet" href="/css/witalk-update.css" type="text/css" media="all">
+	<link rel="stylesheet" href="../css/style.css" type="text/css" media="all">
+	<link rel="stylesheet" href="../css/witalk-update.css" type="text/css" media="all">
 	
-    <link rel="stylesheet" href="/css/elementor-style.css" type="text/css" media="all">
-    <link rel="stylesheet" href="/css/opal-boostrap.css" type="text/css" media="all">
+    <link rel="stylesheet" href="../css/elementor-style.css" type="text/css" media="all">
+    <link rel="stylesheet" href="../css/opal-boostrap.css" type="text/css" media="all">
 
-	<link rel="stylesheet" href="/css/magnific-popup.css" type="text/css" media="all">
-	<link rel="stylesheet" href="/css/style.min.css" type="text/css" media="all">
-	<link rel="stylesheet" href="/css/classic-themes.min.css" type="text/css" media="all">
-	<link rel="stylesheet" href="/css/cf7-style.css" type="text/css" media="all">
-	<link rel="stylesheet" href="/css/swiper.min.css" type="text/css" media="all">
-	<link rel="stylesheet" href="/css/opal-icons.css" type="text/css" media="all">
-	<link rel="stylesheet" href="/css/carousel.css" type="text/css" media="all">
-	<link rel="stylesheet" href="/css/main-style.css" type="text/css" media="all">
-    <link rel="stylesheet" href="/index.css" type="text/css" media="all">
+	<link rel="stylesheet" href="../css/magnific-popup.css" type="text/css" media="all">
+	<link rel="stylesheet" href="../css/style.min.css" type="text/css" media="all">
+	<link rel="stylesheet" href="../css/classic-themes.min.css" type="text/css" media="all">
+	<link rel="stylesheet" href="../css/cf7-style.css" type="text/css" media="all">
+	<link rel="stylesheet" href="../css/swiper.min.css" type="text/css" media="all">
+	<link rel="stylesheet" href="../css/opal-icons.css" type="text/css" media="all">
+	<link rel="stylesheet" href="../css/carousel.css" type="text/css" media="all">
+	<link rel="stylesheet" href="../css/main-style.css" type="text/css" media="all">
+    <link rel="stylesheet" href="../index.css" type="text/css" media="all">
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -41,8 +41,8 @@
 		<div class="row pt-5">
 			<div class="col-12 pt-5 px-5">
 				<nav class="navbar navbar-expand-lg navbar-dark">
-					<a class="navbar-brand" href="/index2.html">
-						<img src="/images/icons/MME_SEE_logo.svg" width="148" class="d-inline-block align-text-top">
+					<a class="navbar-brand" href="../index2.html">
+						<img src="../images/icons/MME_SEE_logo.svg" width="148" class="d-inline-block align-text-top">
 					</a>
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -50,34 +50,35 @@
 					<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav ms-xl-5">
 						<li class="nav-item">
-							<a class="nav-link menu-item" aria-current="page" href="/pages/about2.html">General Information</a>
+							<a class="nav-link menu-item" aria-current="page" href="about2.html">General Information</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link menu-item ms-xl-4" href="/pages/speakers2.html">Speakers</a>
+							<a class="nav-link menu-item ms-xl-4" href="speakers2.html">Speakers</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link menu-item ms-xl-4" href="/pages/program2.html">Program</a>
+							<a class="nav-link menu-item ms-xl-4" href="program2.html">Program</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link menu-item ms-xl-4" href="/pages/sponsors2.html">Sponsors</a>
+							<a class="nav-link menu-item ms-xl-4" href="sponsors2.html">Sponsors</a>
 						</li>
 						<li class="nav-item dropdown ms-xl-4">
 							<a class="nav-link dropdown-toggle menu-item" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 							Archives
 							</a>
 							<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-								<li><a class="dropdown-item" href="/pages/mmesee2013_2.html">MME SEE 2023</a></li>
-								<li><a class="dropdown-item" href="/pages/mmesee2019_2.html">MME SEE 2019</a></li>
-								<li><a class="dropdown-item" href="/pages/mmesee2017_2.html">MME SEE 2017</a></li>
-								<li><a class="dropdown-item" href="/pages/mmesee2015_2.html">MME SEE 2015</a></li>
+								<li><a class="dropdown-item" href="mmesee2023.html">MME SEE 2023</a></li>
+								<li><a class="dropdown-item" href="mmesee2019.html">MME SEE 2019</a></li>
+								<li><a class="dropdown-item" href="mmesee2017.html">MME SEE 2017</a></li>
+								<li><a class="dropdown-item" href="mmesee2015.html">MME SEE 2015</a></li>
+								<li><a class="dropdown-item" href="mmesee2013.html">MME SEE 2013</a></li>
 							</ul>
 						</li>
 						<li class="nav-item ms-xl-4">
-							<a class="nav-link menu-item" href="/pages/contact2.html">Contacts</a>
+							<a class="nav-link menu-item" href="contact2.html">Contacts</a>
 						</li>
 					</ul>
 					<form class="d-flex ms-xl-5">
-						<a href="/pages/register2.html" class="px-5 py-2 elementor-button elementor-size-md rounded-pill btn btn-lg btn-outline-info px-3" role="button">
+						<a href="register2.html" class="px-5 py-2 elementor-button elementor-size-md rounded-pill btn btn-lg btn-outline-info px-3" role="button">
 							<span class="elementor-button-content-wrapper">
 								<span class="elementor-button-text">Register now</span>
 							</span>
